# MeetingNote

./: .gitignore  README.md  check_models.bat  check_runtime.bat  prepare_models.bat  pyproject.toml  run_dev.bat
docs/: PRD.md  architecture.md  development_plan.md  github_upload.md  setup.md
src/meeting_note/: __main__.py  app.py  model_manager.py
src/meeting_note/core/: app_controller.py  asr_provider_factory.py  asr_service.py  audio_processor.py  contracts.py  export_service.py  export_workflow.py  formatting.py  language_detection.py  llm_provider_factory.py  media.py  model_catalog.py  model_preparation.py  model_scanner.py  model_settings.py  preprocessing_service.py  summary_service.py  summary_workflow.py  task_runner.py  transcription_service.py  translation_service.py  translation_workflow.py
tests/: conftest.py  test_app_controller.py  test_asr_provider_factory.py  test_audio_processor.py  test_database.py  test_document_store.py  test_export_service.py  test_export_workflow.py  test_formatting.py  test_funasr_provider.py  test_llama_cpp_provider.py  test_llm_provider_factory.py  test_media.py  test_model_controller_checks.py  test_model_preparation.py  test_model_scanner.py  test_model_settings.py  test_pages.py  test_preprocessing_service.py  test_repositories.py  test_results_page.py  test_summary_service.py  test_summary_workflow.py  test_task_repository.py  test_task_runner.py  test_transcription_service.py  test_translation_service.py  test_translation_workflow.py  test_upload_page.py
tools/: prepare_github_upload.ps1
(+17 files in other folders)
